--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "ip": "^1.1.5",
+    "mongoose": "^5.9.3",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "pug": "^2.0.4"
   },
   "scripts": {
